# gtest_cmake_example

./: CMakeLists.txt  README.md
include/: bye.h  hello.h
lib/gtest-1.7.0/make/: sample1_unittest
src/: bye.cc  hello.cc  main.cc
test/: byeTest.cc  helloTest.cc  reference.txt
